# gpx-studio

./: .gitignore  ALGORITHMS.md  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
public/: sample.gpx
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Charts/: ElevationChart.tsx
src/components/Dialogs/: CoordinateDialog.tsx  ExportDialog.tsx  RenameDialog.tsx  SettingsDialog.tsx  SimplifyDialog.tsx  SplitTrackDialog.tsx
src/components/Map/: MapView.tsx
src/components/Panels/: BottomPanel.tsx
src/components/Sidebar/: Sidebar.tsx  TreeNode.tsx
src/components/Toolbar/: MainToolbar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/formats/: kml.ts
src/lib/gpx/: calculations.ts  exporter.ts  index.ts  operations.ts  parser.ts  types.ts
src/stores/: gpxStore.ts  historyStore.ts  settingsStore.ts  uiStore.ts
